# codegen-eval

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/codegeneval/: __init__.py  cli.py  config.py  generate.py  sandbox.py  score.py  strategies.py  tasks.py  taxonomy.py
src/codegeneval/battery/: __init__.py  lint.py  llm_review.py  mutation.py  props.py  unit.py
src/codegeneval/data/mock_solutions/: binary_search__bare.py  binary_search__spec.py  binary_search__test-first.py  fizzbuzz__bare.py  fizzbuzz__spec.py  flatten__bare.py  flatten__spec.py  has_duplicates__bare.py  has_duplicates__self-review.py  is_palindrome__spec.py  list_files__bare.py  list_files__spec.py  manifest.json  moving_average__bare.py  moving_average__self-review.py  moving_average__spec.py  safe_calc__bare.py  safe_calc__self-review.py  safe_calc__spec.py  safe_calc__test-first.py  slugify__bare.py  slugify__spec.py  word_count__bare.py  word_count__spec.py
src/codegeneval/data/tasks/: binary_search.json  fizzbuzz.json  flatten.json  has_duplicates.json  is_palindrome.json  list_files.json  moving_average.json  safe_calc.json  slugify.json  word_count.json
tests/: test_mutation.py  test_sandbox.py  test_score.py  test_tasks_schema.py
